# contui

./: .gitignore  .releaserc.json  CLAUDE.md  Cargo.toml  HANDOFF.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml  semantic-release.yml  version-bump.yml
docs/: API_INTEGRATION.md  ARCHITECTURE.md  DATA_MODELS.md  GIT_WORKFLOW.md  README.md  TESTING.md  UI_DESIGN.md
docs/plans/: 2026-01-29-update-animations-design.md  2026-01-30-exec-container-design.md  2026-01-30-exec-into-container.md
docs/prd/: US-014-container-stats.md  US-015-container-details.md  US-017-image-details.md  US-018-system-disk-usage.md  US-019-cli-self-management.md
ralph/: prd.json  progress.txt
scripts/: install.ps1  install.sh
src/: app.rs  lib.rs  main.rs
src/config/: mod.rs  model.rs
src/core/: errors.rs  mod.rs  types.rs
src/docker/: client.rs  containers.rs  exec.rs  image_inspect.rs  images.rs  inspect.rs  logs.rs  logs_test.rs  mod.rs  networks.rs  stats.rs  system.rs  volumes.rs
src/exec/: input.rs  mod.rs  spinner.rs
src/registry/: mod.rs
src/state/: app_state.rs  mod.rs
src/ui/: app.rs  mod.rs
src/ui/components/: container_list.rs  detail_panel.rs  detail_viewer.rs  exec_viewer.rs  image_detail_viewer.rs  image_list.rs  log_viewer.rs  mod.rs  network_list.rs  stats_viewer.rs  volume_list.rs
src/ui/screens/: mod.rs
src/ui/widgets/: mod.rs
src/update/: mod.rs  ui.rs
src/utils/: mod.rs
tasks/: prd-docker-tui.md
test-logger/: Dockerfile  Makefile  README.md  docker-compose.yml  logger-colorful.sh  logger.sh  simple-logger.sh
tests/integration/: containers.rs  docker_client.rs  main.rs
